final version without enhancements

--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,8 @@ main {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  gap: 4rem;
 }
 
 .dice-container {
@@ -42,4 +41,16 @@ main {
 
 .roll-dice:hover{
     opacity: 0.8;
+}
+
+.title {
+  font-size: 40px;
+  margin: 0;
+}
+
+.instructions {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  margin-top: 0;
+  text-align: center;
 }
